# InkForge-AI

./: README.md  docker-compose.yml
backend/: dockerfile  main.py  pyproject.toml
backend/src/: main.py
backend/src/core/: prompts.py  settings.py
backend/src/db/: db_connection.py  models.py  redis_client.py
backend/src/models/: db_tables.py
backend/src/repository/: posts_repo.py  users_repo.py
backend/src/router/: ai_router.py  chatbot_router.py  posts_router.py  users_router.py
backend/src/schemas/: chatbot.py  posts.py  user.py
backend/src/service/: ai_service.py  auth_service.py  chatbot_service.py  google_auth.py  pdf_service.py  pdf_template.py  posts_service.py  security.py  users_service.py
backend/src/utils/: pdf_template.py  prompts.py
backend/tests/: test_authentication.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: FeatureCard.jsx  Footer.jsx  ToolBar.jsx  index.js  loader.css  navBar.jsx  postCard.jsx
frontend/src/context/: authContext.js  authContext.jsx
frontend/src/hooks/: useAI.js  useAuth.js  usePosts.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: AboutUsPage.jsx  Dashboard.jsx  HomePage.jsx  Login.jsx  WritingPage.jsx  index.js  pageNotFound.jsx  postPage.jsx  postViewPage.jsx  signup.jsx
frontend/src/pages/authPages/: Login.jsx  signup.jsx
frontend/src/pages/css/: chatwindow.css
frontend/src/services/: aiServices.js  apiConfig.js  authServices.js  postServices.js
(+9 files in other folders)
