[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.132.0",
    "greenlet>=3.3.2",
    "loging>=0.0.1",
    "playwright>=1.58.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
